# SO1_1S2024_202113553

./: README.md
HOJAS_DE_TRABAJO/HT1/: README.MD
HOJAS_DE_TRABAJO/HT1/MODULES/: .Module.symvers.cmd  .modules.order.cmd  .ram.ko.cmd  .ram.mod.cmd  .ram.mod.o.cmd  .ram.o.cmd  ram.c  ram.ko  ram.mod  ram.mod.c
HOJAS_DE_TRABAJO/HT1/backend/: app.go  package-lock.json  package.json  wails.json
HOJAS_DE_TRABAJO/HT1/ht1/: go.mod  main.go  wails.json
PROYECTOS/PROYECTO1/: README.md  docker-compose.yaml  xdd.yaml
PROYECTOS/PROYECTO1/client/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
PROYECTOS/PROYECTO1/server/: .dockerignore  Dockerfile  go.mod  main.go
PROYECTOS/PROYECTO2/: COMANDOS.MD  CONGIF.MD  README.MD
PROYECTOS/PROYECTO2/consumer/: Dockerfile  go.mod  go.sum  main.go
PROYECTOS/PROYECTO2/k8s/: consumer.yaml  grafana.yaml  grpc.yaml  hpa.yaml  ingress.yaml  mongo.yaml  rust.yaml
PROYECTOS/PROYECTO2/kubernetes/: namespace.yaml  redis.yaml
PROYECTOS/PROYECTO2/locust/: data.json  main.py  traffic.json
PROYECTOS/PROYECTO2/producer/rust/server/: Cargo.toml  Dockerfile
PROYECTOS/PROYECTO2/producer/rust/server/src/: main.rs
TAREAS/T1/client/: Dockerfile  bun.lockb
TAREAS/T1/server/: go.mod  main.go
TAREAS/T2/: README.MD
TAREAS/T2/client/: package-lock.json
TAREAS/T2/server/: package-lock.json
TAREAS/T3/: README.md
TAREAS/T4/: README.MD
TAREAS/T4/client/: go.mod  main.go
TAREAS/T5/: README.MD
TAREAS/TAREA 1/: README.MD
TAREAS/TAREA 2/: docker-compose.yaml
(+112 files in other folders)
