[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_cors = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0"
rand = "0.8.4"
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
hyper =  { version = "1.3.1", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }